# py-data-digger

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: python-app.yml
src/: __init__.py  py_data_digger.py
src/py_data_digger/: __init__.py  main.py
tests/py_data_digger/: conftest.py  test_seek.py
tests/py_data_digger/dig/: test_dig_failure.py  test_dig_success.py
tests/py_data_digger/seek/: test_failure.py  test_seek_failure.py  test_seek_success.py
